force-app/main/default/objects/SAC_PlantillaRedaccion__c/SAC_PlantillaRedaccion__c.object-meta.xml
<CustomObject>
    <label>Plantilla SAC</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Plantilla Redaccion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plantillas SAC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>