force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_CanalRespuesta__c.field-meta.xml
<CustomField>
    <fullName>SAC_CanalRespuesta__c</fullName>
    <description>Canal de respuesta de la reclamación por el cual se enviará la prorroga.</description>
    <label>Canal de respuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_CartaPostal</fullName>
                <label>Carta Postal</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>