force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_MCC__c.field-meta.xml
<CustomField>
    <fullName>SAC_MCC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MCC</label>
    <referenceTo>CC_MCC__c</referenceTo>
    <relationshipName>Plantillas_Redaccion</relationshipName>
    <type>Lookup</type>
</CustomField>