force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_Motivo_Inadmision__c.field-meta.xml
<CustomField>
    <fullName>SAC_Motivo_Inadmision__c</fullName>
    <label>Motivo Inadmisión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No consumidor</fullName>
            </value>
            <value>
                <fullName>Empleados</fullName>
            </value>
            <value>
                <fullName>Antigüedad reclamación</fullName>
            </value>
            <value>
                <fullName>Prescripción</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>