force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_MotivoSubsanacion__c.field-meta.xml
<CustomField>
    <fullName>SAC_MotivoSubsanacion__c</fullName>
    <label>Motivo subsanación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Falta documentación</fullName>
            </value>
            <value>
                <fullName>Reclamante no se identifica</fullName>
            </value>
            <value>
                <fullName>Varios</fullName>
            </value>
            <value>
                <fullName>Faltan poderes abogado/ familiar/ representante empresa</fullName>
            </value>
            <value>
                <fullName>Falta de identificación</fullName>
            </value>
            <value>
                <fullName>Faltan datos o concreción</fullName>
            </value>
            <value>
                <fullName>Mail no registrado Seguros</fullName>
            </value>
            <value>
                <fullName>No aporta factura</fullName>
            </value>
            <value>
                <fullName>En plazo legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>