force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_Origen__c.field-meta.xml
<CustomField>
    <fullName>SAC_Origen__c</fullName>
    <description>Origen del canal por el cual se crea la reclamación y por el cual se va a enviar el acuse de recibo</description>
    <label>Origen</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>SAC_Formulario</fullName>
                <label>Formulario Web</label>
            </value>
            <value>
                <fullName>SAC_CartaPostal</fullName>
                <label>Carta postal</label>
            </value>
            <value>
                <fullName>SAC_Manual</fullName>
                <label>Manual</label>
            </value>
            <value>
                <fullName>SAC_FormularioOficina</fullName>
                <label>Formulario Oficina</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>