force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_PlantillaCastellano__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaCastellano__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Castellano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>