force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_PlantillaCastellanoId__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaCastellanoId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Castellano Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>