force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_PlantillaInglesId__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaInglesId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Inglés Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>