force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_PlantillaValenciano__c.field-meta.xml
<CustomField>
    <fullName>SAC_PlantillaValenciano__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Valenciano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>