force-app/main/default/objects/SAC_PlantillaRedaccion__c/fields/SAC_TipoPlantilla__c.field-meta.xml
<CustomField>
    <fullName>SAC_TipoPlantilla__c</fullName>
    <label>Tipo de Plantilla</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAC_Redaccion</fullName>
                <label>Redacción</label>
            </value>
            <value>
                <fullName>SAC_Inadmision</fullName>
                <label>Inadmisión</label>
            </value>
            <value>
                <fullName>SAC_Subsanacion</fullName>
                <label>Subsanación</label>
            </value>
            <value>
                <fullName>SAC_Derivacion</fullName>
                <label>Derivación</label>
            </value>
            <value>
                <fullName>SAC_AcuseDeRecibo</fullName>
                <label>Acuse de recibo</label>
            </value>
            <value>
                <fullName>SAC_Prorroga</fullName>
                <label>Prórroga</label>
            </value>
            <value>
                <fullName>SAC_FastTrack</fullName>
                <label>Fast track</label>
            </value>
            <value>
                <fullName>SAC_AvisoResolucion</fullName>
                <label>Aviso Resolución</label>
            </value>
            <value>
                <fullName>SAC_CartaAutomatica</fullName>
                <label>Carta automática</label>
            </value>
            <value>
                <fullName>SAC_ResolucionExpress</fullName>
                <label>Resolución express</label>
            </value>
            <value>
                <fullName>SAC_AvisoResolucionCartaPostal</fullName>
                <label>Aviso resolución carta postal</label>
            </value>
            <value>
                <fullName>SAC_AvisoResolucionSubsanacion</fullName>
                <label>Aviso resolución subsanación</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>