force-app/main/default/objects/SAC_PlantillaRedaccion__c/recordTypes/SAC_Derivacion.recordType-meta.xml
<RecordType>
    <fullName>SAC_Derivacion</fullName>
    <active>true</active>
    <description>RecordType para almacenar las plantillas de derivación</description>
    <label>Derivación</label>
</RecordType>