force-app/main/default/objects/SAC_PlantillaRedaccion__c/recordTypes/SAC_Redaccion.recordType-meta.xml
<RecordType>
    <fullName>SAC_Redaccion</fullName>
    <active>true</active>
    <description>Recrd Type para las plantillas de redacción</description>
    <label>Redacción</label>
</RecordType>